css/main.css
/* ... */
.follow {
  margin: 30px 0 50px;
}

.contact-email {
  margin-top: 25px;
}

.contact-email a {
  color: #fdd923;
  font-size: 18px;
}

.copyright {
  margin-top: 15px;
}

/*------------------------------------------------------
COMING SOON PAGES 
------------------------------------------------------*/

.coming-soon {
  background-color: #f7f7f7;
  color: black;
  text-align: center;
  height: 100vh;
}

.coming-soon p {
  font-size: 60px;
  padding-top: 150px;
  margin: 0;
}

/* ==========================================================================
     Helper classes
     ========================================================================== */

/*
   * Hide visually and from screen readers
   */

.hidden,
[hidden] {
  display: none !important;
}

/*
   * Hide only visually, but have it available for screen readers:
   * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
   *
   * 1. For long content, line feeds are not interpreted as spaces and small width
   *    causes content to wrap 1 word per line:
   *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
   */

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
   * Extends the .sr-only class to allow the element
   * to be focusable when navigated to via the keyboard:
   * https://www.drupal.org/node/897638
   */

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
   * Hide visually and from screen readers, but maintain layout
   */

.invisible {
  visibility: hidden;
}

/*
   * Clearfix: contain floats
   *
   * For modern browsers
   * 1. The space content is one way to avoid an Opera bug when the
   *    `contenteditable` attribute is included anywhere else in the document.
   *    Otherwise it causes space to appear at the top and bottom of elements
   *    that receive the `clearfix` class.
   * 2. The use of `table` rather than `block` is only necessary if using
   *    `:before` to contain the top-margins of child elements.
   */

.clearfix::before,
.clearfix::after {
  content: " ";
  display: table;
}

.clearfix::after {
  clear: both;
}

/* ====================================
  ======================================
       Media Queries - TABLET 
     =======================================
     =================================== */

@media only screen and (min-width: 768px) {
  /* General styles */

  html,
  body {
    width: 100%;
    overflow-x: hidden;
  }

  header {
    display: block;
    padding-top: 0;
  }

  .logo {
    font-family: "Playfair Display", serif;
    font-weight: 700;
    font-size: 3.5rem;
    margin: 0;
    color: #000;
    text-transform: uppercase;
    font-size: 20px;
    margin-left: 20px;
  }

  header h2 {
    font-size: 2.5rem;
  }

  h3 {
    font-size: 2rem;
  }

  .topnav {
    display: none;
  }

  .header-wrapper {
    padding: 12px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .navbar {
    margin-right: 20px;
  }

  nav ul {
    display: flex;
  }

  nav ul li {
    margin: 0 10px;
    font-size: 20px;
  }

  .btn {
    font-size: 1.25rem;
    padding: 15px 35px;
    border-radius: 25px;
    margin-top: 40px;
    text-transform: uppercase;
  }

  .hero-btn {
    margin-top: 50px;
    padding: 10px 20px;
  }

  .hero {
    height: 50vh;
  }

  .hero::before {
    background: url("../img/tabletopenpic.jpg") no-repeat;
    background-color: #000;
    background-size: cover;
  }
  .hero h1 {
    margin-top: 50px;
    font-size: 30px;
    width: 75%;
    text-align: left;
    padding-top: 10px;
    font-weight: bold;
  }

  .hero-content p {
    margin-top: 100px;
    margin-top: 0;
    font-size: 22px;
    padding: 0;
    font-weight: bold;
  }

  .hero-content {
    margin-left: 20px;

    display: flex;
  }

  .hero-content-side1 {
    width: 60%;
  }

  .hero-content-side2 {
    width: 40%;
    align-self: flex-end;
  }

  /* .hero-content-side2 p {
    display: inline-block;
    width: 100%;
    text-align: right;
  } */

  .keynote-speaker {
    padding: 50px 0;
  }

  .keynote-speaker,
  .speaking-topics-div {
    display: flex;
    margin: 0 20px;
  }

  .keynote-speaker-text h2,
  .speaking-topics h2 {
    font-size: 35px;
  }

  .keynote-speaker-text h2 {
    margin-bottom: 40px;
  }

  .speaking-topics h2 {
    text-transform: uppercase;
    margin-top: 0;
  }
  .speaking-topics-div2 {
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .speaking-topics {
    padding: 70px 0;
  }

  .speaking-topics img {
    width: 50%;
  }
  /* COMPANY LOGOS */

  .company-logos {
    padding: 20px 0 50px;
  }

  .company-logos img {
    width: 100px;
  }

  .company-logo-list {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin: 25px 40px;
  }

  .amex-desktop::before {
    display: block;
  }

  .amex-mobile::before {
    display: none;
  }

  /* ABOUT */

  .about {
    padding: 70px 0;
  }

  .about h3 {
    margin: 40px 0;
    font-size: 40px;
  }

  .about p {
    margin-top: 0;
  }

  /* .about-pic1 {
    width: 400px;
  } */

  /* FOOTER */

  .footer-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .contact-email a {
    font-size: 25px;
  }

  .contact-email {
    margin: 50px 0 30px;
  }

  #contact {
    padding: 0 40px;
  }

  .contact p {
    color: white;
    margin: 0 10px;
    font-size: 28px;
  }
}
/* ... */

